// MIT License
// Copyright (c) 2026, Jericho Crosby (Chalwk)
// Project: PokemonTCGCollectionManager

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '4.0.0-beta2'
}

application {
    mainClass = 'com.chalwk.pokemon.Main'
}

group = 'com.chalwk'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-core:2.21.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
}

jlink {
    launcher {
        name = 'PokemonTCGCollectionManager'
    }

    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

    jpackage {
        installerType = 'exe'
        installerOptions = [
                '--description', 'Pokémon TCG Collection Manager',
                '--vendor', 'Jericho Crosby',
                '--win-menu',
                '--win-shortcut',
                '--win-dir-chooser',
                '--verbose',
                '--about-url', 'https://chalwk.github.io',
                '--copyright', 'Copyright © 2026 Jericho Crosby (Chalwk)',
                '--license-file', 'src/main/resources/LICENSE.txt',
        ]

        imageOptions = [
                '--icon', 'src/main/resources/icon.ico'
        ]
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
            includes = ['**/*']
        }
    }
}